--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <li>squirtle</li>
     <li>charmander</li>
     <li>blastoise</li>
-    <p>Please use https://blooming-oasis-30918.herokuapp.com/api/poke-name</p>
+    <p>Please use https://poke-ap.herokuapp.com/api</p>
 </body>
 </html>
